--- a/style.css
+++ b/style.css
@@ -322,15 +322,6 @@ footer {
 		".";
     }
 
-    /* .home, .languages, .crew, .offers, .contact{
-        justify-self: left;
-		justify-content: start;
-    } */
-
-    /* #mobile {
-		justify-items: left;
-	} */
-
     .icon {
 		padding: 15px 17px;
 		color: white;
@@ -370,10 +361,31 @@ footer {
     }
 
     .front_boxes{
-        display: none;
+        justify-self: center;
+        width: 95%;
+        grid-template-rows: 20px 100px 20px 100px 20px 100px 20px;
+        grid-template-columns: 10px auto 10px;
+        grid-template-areas:
+        ". . ."
+        ". kids ."
+        ". . ."
+        ". students ."
+        ". . ."
+        ". adults ."
+        ". . .";
+    }
+
+    .kids, .students, .adults{
+        margin-top: -70px;
+        justify-self: center;
+        /* font-size: 20px; */
+    }
+    .kids h1, .students h1, .adults h1{
+        margin-top: 30px;
+        font-size: 20px;
     }
 
     footer{
-        margin-top: 500px;
+        /* margin-top: 100px; */
     }
 }
