--- a/crew/crew_style.css
+++ b/crew/crew_style.css
@@ -1,232 +1,47 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-	margin:0;
-	padding:0;
-	border:0;
-	outline:0;
-	font-size:100%;
-	vertical-align:baseline;
-	background:transparent;
+.title {
+	display: none;
 }
 
-	body{
-	line-height: 1;
-}
-
-	article,aside,details,figcaption,figure,
-	footer,header,hgroup,menu,nav,section {
-	display:block;
-}
-
-	nav ul {
-	list-style:none;
-}
-
-blockquote, q {
-	quotes:none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content:'';
-	content:none;
-}
-
-a {
-	margin:0;
-	padding:0;
-	font-size:100%;
-	vertical-align:baseline;
-	background:transparent;
-}
-
-	/* change colours to suit your needs */
-ins {
-	background-color:#ff9;
-	color:#000;
-	text-decoration:none;
-}
-
-	/* change colours to suit your needs */
-mark {
-	background-color:#ff9;
-	color:#000;
-	font-style:italic;
-	font-weight:bold;
-}
-
-del {
-	text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-	border-bottom:1px dotted;
-	cursor:help;
-}
-
-table {
-	border-collapse:collapse;
-	border-spacing:0;
-}
-
-	/* change border colour to suit your needs */
-hr {
-	display:block;
-	height:1px;
-	border:0;  
-	border-top:1px solid #cccccc;
-	margin:1em 0;
-	padding:0;
-}
-
-input, select {
-	vertical-align:middle;
-}
-
-
-
-/* ############################################################################# 
-###############################################################################*/
-
-/* STYLE THE HEADER */
-a {
-	text-decoration: none;
-}
-
-.header {
-	position: fixed;
-	top: 0px;
-	width: 100%;
-	height: fit-content;
-	background-color: #1f9fba;
-}
-
-.letters_up {
-	margin-top: -70px;
-	font-weight: 500;
-	font-size: 20px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	text-transform: uppercase;
-	text-align: center;
+.menu .crew h1 {
 	color: white;
-	padding: 3px;
 }
 
-.letters_middle{
-	font-weight: 550;
-	font-size: 50px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	text-transform: uppercase;
-	text-align: center;
+.topnav #crew {
 	color: white;
-	padding: 3px;
 }
 
-.letters_down {
-	font-weight: 500;
-	font-size: 20px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	text-transform: uppercase;
-	text-align: center;
-	color: white;
-	padding: 3px;
-}
-
-/* ############ Code for the Sidenav bar ############ */
-
-.container {
-	display: inline-block;
-	cursor: pointer;
-	font-size: 30px;
-}
-	  
-.bar1 {
-	margin-left: 10px;
-	margin-top: 35px;
-	width: 35px;
-	height: 5px;
+.content {
+	width: 80%;
 	background-color: white;
-	transition: 0.4s;
+	margin: 40px auto;
+	padding: 5px;
+	justify-self: center;
+	
 }
-
-.bar2, .bar3 {
-	margin-left: 10px;
-	margin-top: 10px;
-	width: 35px;
-	height: 5px;
-	background-color: white;
-	transition: 0.4s;
-} 
-
-.sidenav {
-	height: 100%;
-	width: 0;
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background-color: rgb(46, 44, 44);
-	overflow-x: hidden;
-	transition: 0.5s;
-	padding-top: 60px;
-}
-.sidenav a {
-	margin-top: 10px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	text-align: center;
-	text-decoration: none;
-	font-size: 25px;
-	color: #ffffff;
-	display: block;
-	transition: 0.3s;
-}
-.sidenav a:hover {
-	background-color: #696969;
-}
-.sidenav .closebtn {
-	padding: 5px 5px 5px 5px;
-	color: rgb(192, 192, 192);
-	position: absolute;
-	top: 0;
-	right: 25px;
-	font-size: 40px;
-	margin-left: 50px;
-}
-.sidenav .closebtn:hover {
-	background-color: rgb(46, 44, 44);
-	color: rgb(255, 255, 255);
-}
-
-
-
 /* ###################### HOLY SHIT ######################### */
-
-.crew {
+/* .crew {
 	display: grid;
-	margin-top: 150px;
-	width: 100%;
 	grid-template-columns: 1fr 300px 20px 300px 20px 300px 1fr;
 	grid-auto-rows: 300px;
 	grid-template-areas:
 	". container1 . container2 . container3 .";
 	align-content: center;
+} */
+
+.crew_members {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+
+	align-items: center;
+	text-align: center;
 }
 
 .container1 {
-	grid-area: container1;
+	/* grid-area: container1; */
 	position: relative;
-	width: 50%;
+	width: fit-content;
+	margin-bottom: 20px;
 }
 
 .image1 {
@@ -267,9 +82,10 @@ a {
 /* ########## 2 ########### */
 
 .container2 {
-	grid-area: container2;
+	/* grid-area: container2; */
 	position: relative;
-	width: 50%;
+	width: fit-content;
+	margin-bottom: 20px;
 }
 
 .image2 {
@@ -309,9 +125,10 @@ a {
 
 /* ####### 3 ######## */
 .container3 {
-	grid-area: container3;
+	/* grid-area: container3; */
 	position: relative;
-	width: 50%;
+	width: fit-content;
+	margin-bottom: 20px;
 }
 
 .image3 {
@@ -347,4 +164,15 @@ a {
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	text-align: center;
+}
+
+
+/* ##################################################################### */
+/* #                            MOBILE                                 # */
+/* ##################################################################### */
+
+@media screen and (max-width: 824px){
+	.title {
+		display: block;
+	}
 }
