--- a/contact/contact_style.css
+++ b/contact/contact_style.css
@@ -13,7 +13,15 @@
     margin: 40px auto;
     width: 80%;
     height: 400px;
-    background-color: white;    
+    background-color: white;   
+    height: fit-content; 
+    text-align: center;
+    padding: 50px;
+}
+
+.content h1{
+    font-size: 45px;
+    padding: 10px;
 }
 
 form {
@@ -22,13 +30,13 @@ form {
 }
 
 .form_control {
-    background: rgba(255, 255, 255, 0.9);
+    width: 800px;
+    background: transparent;
     border: none;
     outline: none;
     border-bottom: 1px solid gray;
     color: black;
-	font-size: 18px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 25px;
 }
 
 input {
@@ -39,12 +47,10 @@ input {
 form .submit {
     border-color: transparent;
     color: black;
-    font-size: 20px;
+    font-size: 35px;
     font-weight: bold;
-    letter-spacing: 2px;
-    height: 50px;
-	margin-top: 20px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 3px;
+    height: 60px;
 }
 
 form .submit:hover {
@@ -52,7 +58,7 @@ form .submit:hover {
 }
 
 input {
-    height: 45px;
+    height: 50px;
 }
 
 
@@ -68,4 +74,18 @@ input {
     .topnav #contact {
         color: white;
     }
+    .content{
+        padding: 0;
+        width: 90%;
+    }
+    .content h1{
+        font-size: 30px;
+    }
+    .form_control {
+		width: 95%;
+		font-size: 20px;
+    }
+    /* .submit{
+        font-size: 10;
+    } */
 }
