--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-color:white;
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 100px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* ########### Code for top menu bar ############# */
@@ -171,9 +175,9 @@ footer {
 	display: block;
 	text-align: center;
 	background-color: rgb(0, 0, 0);
-	position: relative;
+	position: absolute;
 	bottom: 0;
-	height: 150px;
+	height: 130px;
 	width: 100%;
 }
 
@@ -227,14 +231,11 @@ footer {
     }
 
     .kids, .students, .adults{
-        /* margin-top: -70px; */
         justify-self: center;
-        /* font-size: 20px; */
     }
     .kids h1, .students h1, .adults h1{
         margin-top: 30px;
         font-size: 20px;
     }
-
 
 }
