--- a/lang/languages_style.css
+++ b/lang/languages_style.css
@@ -11,10 +11,99 @@
 }
 
 .content {
+    display: grid;
     margin: 40px auto;
-    width: 80%;
-    height: 400px;
+    width: 90%;
+    height: fit-content;
     background-color: white;    
+    padding: 5px;
+	justify-self: center;
+    grid-template-rows: auto 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px 75px;
+    grid-template-columns: 30px auto 30px;
+    grid-template-areas: 
+    ". . ."
+    ". english ."
+    ". . ."
+    ". french ."
+    ". . ."
+    ". german ."
+    ". . ."
+    ". spanish ."
+    ". . ."
+    ". italian ."
+    ". . ."
+    ". turkish ."
+    ". . ."
+    ". russian ."
+    ". . ."
+    ". chinese ."
+    ". . .";
+}
+
+.english{
+    font-size: 25px;
+    grid-area: english;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+    
+}
+.french{
+    font-size: 25px;
+    grid-area: french;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+.german{
+    font-size: 25px;
+    grid-area: german;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+.spanish{
+    font-size: 25px;
+    grid-area: spanish;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+.italian{
+    font-size: 25px;
+    grid-area: italian;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+.turkish{
+    font-size: 25px;
+    grid-area: turkish;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+.russian{
+    font-size: 25px;
+    grid-area: russian;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+.chinese{
+    font-size: 25px;
+    grid-area: chinese;
+    background-color: rgba(252,143,68, 0.8);
+    cursor: pointer;
+}
+
+.english h2, .french h2, .german h2, .spanish h2, .italian h2, .turkish h2, .russian h2, .chinese h2{
+    padding: 10px;
+}
+
+.english, .french, .german, .spanish, .italian, .turkish, .russian, .chinese{
+    width: 70%;
+    justify-self: center;
+}
+
+
+.content h1{
+    text-align: center;
+	font-size: 45px;
+	padding: 10px;
 }
 /* ##################################################################### */
 /* #                            MOBILE                                 # */
@@ -28,6 +117,15 @@
     }
     .topnav #languages {
         color: white;
+    }
+    .content h1{
+        font-size: 30px;
+    }
+    .content{
+        grid-template-rows: auto 60px 10px 60px 10px 60px 10px 60px 10px 60px 10px 60px 10px 60px 10px 60px;
+    }
+    .english, .french, .german, .spanish, .italian, .turkish, .russian, .chinese{
+        font-size: 18px;
     }
 
 }
