--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     position: relative;
     padding-bottom: 100px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 0px;
 }
 
 /* ########### Code for top menu bar ############# */
@@ -178,7 +179,7 @@ footer {
 	position: absolute;
 	bottom: 0;
 	height: 130px;
-	width: 100%;
+    width: 100%;
 }
 
 /* ##################################################################### */
