--- a/lang/languages_style.css
+++ b/lang/languages_style.css
@@ -15,15 +15,18 @@
 }
 
 .slideshow_container {
+    grid-area: slideshow_container;
     max-width: 1000px;
-    position: relative;
+    position: block;
     margin: auto;
 }
 
-.mySlides {display: none;}
+/* .mySlides {display: none;} */
 img {
     vertical-align: middle;
-    margin: 20px auto;
+    margin: auto;
+    height: 600px;
+    /* max-height: 500px; */
     /* max-height: 595px; */
     /* align-self: middle; */
 }
@@ -40,15 +43,16 @@ img {
     display: grid;
     margin: 40px auto;
     width: 90%;
-    height: fit-content + 200px;
+    /* height: fit-content + 200px; */
     background-color: white;    
     padding: 5px;
 	justify-self: center;
-    grid-template-rows: auto ;
+    grid-template-rows: 50px 650px auto ;
     /* 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px 75px 20px auto; */
-    grid-template-columns: 30px auto 30px;
+    grid-template-columns: 25px auto 25px;
     grid-template-areas: 
     ". . ."
+    ". slideshow_container ."
     ". english ."
     ". eng_text ."
     ". french ."
@@ -173,7 +177,6 @@ img {
 }
 
 .english #eng, .french #fre, .german #ger, .spanish #spa, .italian #ita, .turkish #tur, .russian #rus, .chinese #chi{
-
     display: block;
 }
 
@@ -245,6 +248,9 @@ img {
     #eng p, #fre p, #ger p, #spa p, #ita p, #tur p, #rus p, #chi p{
         margin: 0 2%;
         font-size: 18px;
+    }
+    img{
+        height: 250px;
     }
 
 }
