--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ body {
     width: 100%;
 }
 
+.front_boxes a{
+    text-decoration: none;
+}
+
 .kids {
     grid-area: kids;
     background-color: #fc8f44;
@@ -181,6 +185,64 @@ body {
 	height: 130px;
   width: 100%;
 } */
+.info {
+    display: grid;
+    position: relative;
+    bottom: 0;
+    /* SOS */
+    /* margin-top: 100%; */
+    width: 100%;
+    height: 200px;
+    background-color: #000;
+    grid-auto-rows: 200px;
+    grid-template-columns: 1fr 500px 1fr 500px 1fr;
+    grid-template-areas:
+    ". programms . information .";
+}
+.programms {
+    grid-area: programms;
+    margin-top: 10px;
+    margin-left: 15%;
+    color: white;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+.programms p{
+    padding: 5px;
+}
+.programms a{
+    color: white;
+}
+
+.information {
+    grid-area: information;
+    margin-top: 10px;
+    margin-left: 15%;
+    color: white;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.information p{
+    padding: 5px;
+}
+
+.loc{
+    width: 30px;
+    height: 30px;
+}
+
+.ph{
+    width: 30px;
+    height: 30px;
+}
+
+.em{
+    width: 30px;
+    height: 30px;
+}
 
 /* ##################################################################### */
 /* #                            MOBILE                                 # */
