--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ body {
 .info {
     display: grid;
     position: relative;
+    justify-self: center;
     bottom: 0;
     /* SOS */
     /* margin-top: 100%; */
@@ -195,7 +196,7 @@ body {
     height: 200px;
     background-color: #000;
     grid-auto-rows: 200px;
-    grid-template-columns: 1fr 500px 1fr 500px 1fr;
+    grid-template-columns: auto;
     grid-template-areas:
     ". programms . information .";
 }
@@ -207,6 +208,7 @@ body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    justify-self: center;
 }
 .programms p{
     padding: 5px;
@@ -223,6 +225,7 @@ body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    justify-self: center;
 }
 
 .information p{
@@ -299,6 +302,27 @@ body {
     .kids h1, .students h1, .adults h1{
         margin-top: 30px;
         font-size: 20px;
+    }
+
+    .info{
+        grid-template-columns:auto;
+        grid-template-areas:
+        ". information .";
+        justify-content: center;
+        text-align: center;
+
+    }
+    .programms{
+        display: none;
+    }
+    .information{
+        text-align: center;
+        font-size: 15px;
+    }
+
+    .loc, .ph, .em{
+        width: 20px;
+        height: 20px;
     }
 
 }
