--- a/style.css
+++ b/style.css
@@ -305,12 +305,9 @@ body {
     }
 
     .info{
-        grid-template-columns:auto;
+        grid-template-columns: 10px auto 10px;
         grid-template-areas:
         ". information .";
-        justify-content: center;
-        text-align: center;
-
     }
     .programms{
         display: none;
