--- a/style.css
+++ b/style.css
@@ -246,6 +246,47 @@ body {
     width: 30px;
     height: 30px;
 }
+/* ATTEMPT FOR BOOTSTRAP MODAL */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal-dialog {
+      /* width: 60%; */
+      text-align: center;
+}
+  /* Modal Content/Box */
+.modal-content {
+    font-size: 30px;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 50px;
+    border: 1px solid #888;
+    width: 60%; /* Could be more or less, depending on screen size */
+}
+  
+  /* The Close Button */
+.close {
+    top: 0;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 /* ##################################################################### */
 /* #                            MOBILE                                 # */
