--- a/css/footer.css
+++ b/css/footer.css
@@ -7,3 +7,65 @@ footer {
 	height: 130px;
 	width: 100%;
 }
+
+.info {
+	display: grid;
+	position: relative;
+	justify-self: center;
+	bottom: 0;
+	/* SOS */
+	/* margin-top: 100%; */
+	width: 100%;
+	height: 200px;
+	background-color: #000;
+	grid-auto-rows: 200px;
+	grid-template-columns: auto;
+	grid-template-areas:
+	". programms information .";
+}
+.programms {
+	grid-area: programms;
+	margin-top: 10px;
+	/* margin-left: 15%; */
+	color: white;
+	font-size: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
+	justify-self: center;
+}
+.programms p{
+	padding: 5px;
+}
+.programms a{
+	color: white;
+}
+
+.information {
+	grid-area: information;
+	margin-top: 10px;
+	color: white;
+	font-size: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
+	justify-self: center;
+}
+
+.information p{
+	padding: 5px;
+}
+
+
+.loc {
+	width: 30px;
+	height: 30px;
+}
+
+.ph {
+	width: 30px;
+	height: 30px;
+}
+
+.em {
+	width: 30px;
+	height: 30px;
+}
